--- a/web/reportes/proyectoEstadoDepto.jrxml
+++ b/web/reportes/proyectoEstadoDepto.jrxml
@@ -53,26 +53,44 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 			</line>
 			<staticText>
 				<reportElement style="Column header" x="0" y="19" width="65" height="15" uuid="0d03e351-f1f3-4566-92ba-e5f2a9700fbb"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Codigo]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="79" y="20" width="95" height="15" uuid="66502fe7-c156-4f10-99da-9c03fc037eb7"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Proyecto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="184" y="19" width="64" height="15" uuid="d760da1c-4699-41be-b83e-b72f02003b44"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Costo]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="248" y="20" width="92" height="15" uuid="70b1220e-b2da-4615-95f1-f33c5ec2eb55"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Estado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="327" y="19" width="117" height="15" uuid="bff31cc9-4e18-4f47-8a6b-caecd911652c"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Motivo_Cancelado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="Column header" x="460" y="19" width="92" height="15" uuid="1a661052-5906-4047-871a-83cbde88fcd8"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
 				<text><![CDATA[Departamento]]></text>
 			</staticText>
 		</band>
@@ -87,26 +105,32 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 			</line>
 			<textField>
 				<reportElement style="Detail" x="0" y="0" width="65" height="15" uuid="f3f4a6ad-cfd8-4e7d-869b-e47952217748"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Detail" x="82" y="0" width="92" height="15" uuid="71f9ab38-4c96-44a2-a491-a8f15f886664"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Proyecto}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Detail" x="184" y="0" width="64" height="15" uuid="bafde93f-c675-48bb-9ef0-3af83972668c"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Costo}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Detail" x="248" y="0" width="92" height="15" uuid="a099a654-838b-40f4-9da9-8fa1d25d5888"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Estado}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Detail" x="327" y="0" width="92" height="15" uuid="04dcfee7-ab1b-418d-b2ba-e339118bf3b6"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Motivo_Cancelado}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Detail" x="460" y="0" width="92" height="15" uuid="51d97b61-a4ae-4e2d-ab34-bde2b4703604"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Departamento}]]></textFieldExpression>
 			</textField>
 		</band>
