--- a/web/reportes/proyectoEstadoDepto.jrxml
+++ b/web/reportes/proyectoEstadoDepto.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="86f1d0fd-f470-498a-91b1-821276c62206">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="016d2b7e-ceee-445f-b880-7771f3d87fdf">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -7,22 +7,21 @@
 	<style name="SubTitle" forecolor="#666666" fontName="Arial" fontSize="18"/>
 	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
 	<style name="Detail" fontName="Arial" fontSize="12"/>
-	<parameter name="idDepto" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<parameter name="estado" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="munId" class="java.lang.Integer">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT p.idProyecto as Codigo, p.nombreProyecto as Proyecto, p.costoProyecto as Costo, p.estadoProyecto as Estado,
-p.motivoCancelacion as Motivo_Cancelado, d.nombreDepto as Departamento FROM proyecto as p INNER JOIN departamento as d ON (d.idDepto = p.deptoId)
-WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
+		<![CDATA[SELECT p.idProyecto as Codigo, p.nombreProyecto as Proyecto, p.costoProyecto as Costo, p.estadoProyecto as Estado, p.motivoCancelacion as Motivo_Cancelado, m.nombreMun AS Municipio, d.nombreDepto AS Departamento FROM proyecto AS p INNER JOIN municipio AS m ON(m.idMunicipio = p.munId) INNER JOIN departamento AS d ON (d.idDepto = m.deptoId) WHERE p.estadoProyecto = $P{estado} AND p.munId = $P{munId} GROUP BY p.idProyecto;]]>
 	</queryString>
 	<field name="Codigo" class="java.lang.Integer"/>
 	<field name="Proyecto" class="java.lang.String"/>
 	<field name="Costo" class="java.lang.Double"/>
 	<field name="Estado" class="java.lang.String"/>
 	<field name="Motivo_Cancelado" class="java.lang.String"/>
+	<field name="Municipio" class="java.lang.String"/>
 	<field name="Departamento" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
@@ -30,13 +29,13 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 	<title>
 		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement style="Title" x="0" y="13" width="276" height="33" uuid="da6d1e90-27e1-408d-b751-2fab5c778be8"/>
+				<reportElement style="Title" x="0" y="13" width="274" height="33" uuid="ecf3c5dc-151b-4185-b977-e5d80a1f168c"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Reporte de proyectos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="SubTitle" x="100" y="46" width="227" height="22" uuid="102f6bef-a775-4fad-8461-a383feb5192d"/>
-				<text><![CDATA[Por estado y departamento]]></text>
+				<reportElement style="SubTitle" x="100" y="46" width="191" height="22" uuid="fbc4ee21-1a6f-4a16-80c2-c50b32227025"/>
+				<text><![CDATA[Por estado y municipio]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -46,51 +45,44 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 	<columnHeader>
 		<band height="36" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="35" width="555" height="1" uuid="1da031db-25ca-48a6-96d4-97d127f47898"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="35" width="555" height="1" uuid="6aa776d4-cd0f-4ab0-b4f1-15e025af6f48"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement style="Column header" x="0" y="19" width="65" height="15" uuid="0d03e351-f1f3-4566-92ba-e5f2a9700fbb"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="0" y="19" width="60" height="15" uuid="2f2e381f-5b6a-4007-bf92-711bdb705b6d"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Codigo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="79" y="20" width="95" height="15" uuid="66502fe7-c156-4f10-99da-9c03fc037eb7"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="60" y="19" width="79" height="15" uuid="bdb99e74-a178-4224-87af-a8c70f766b1f"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Proyecto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="184" y="19" width="64" height="15" uuid="d760da1c-4699-41be-b83e-b72f02003b44"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="152" y="19" width="69" height="15" uuid="5b62f100-f8ec-4969-8470-7460aa8007d0"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Costo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="248" y="20" width="92" height="15" uuid="70b1220e-b2da-4615-95f1-f33c5ec2eb55"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="221" y="19" width="79" height="15" uuid="00e543ec-5e8a-4151-8e92-24cc6063f191"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Estado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="327" y="19" width="117" height="15" uuid="bff31cc9-4e18-4f47-8a6b-caecd911652c"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="300" y="19" width="79" height="15" uuid="ff3cfa70-6e83-4bab-84f6-7b00c0325956"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Motivo_Cancelado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="460" y="19" width="92" height="15" uuid="1a661052-5906-4047-871a-83cbde88fcd8"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
+				<reportElement style="Column header" x="379" y="19" width="79" height="15" uuid="a302f7fb-be53-4c7c-bf18-e141d2860822"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Municipio]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="458" y="19" width="95" height="15" uuid="369947c4-f60b-4c38-ada7-2d4f44f2309a"/>
+				<textElement textAlignment="Center"/>
 				<text><![CDATA[Departamento]]></text>
 			</staticText>
 		</band>
@@ -98,38 +90,43 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 	<detail>
 		<band height="16" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="15" width="555" height="1" uuid="7e96daa0-10f5-4e3b-a41e-8aaeeb5f1ea7"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="15" width="555" height="1" uuid="bf09bd75-85d3-4da3-9d9a-0f33ce615051"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
 			<textField>
-				<reportElement style="Detail" x="0" y="0" width="65" height="15" uuid="f3f4a6ad-cfd8-4e7d-869b-e47952217748"/>
+				<reportElement style="Detail" x="0" y="0" width="60" height="15" uuid="5c9d283a-b82e-4785-a867-bb9d53f72370"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="82" y="0" width="92" height="15" uuid="71f9ab38-4c96-44a2-a491-a8f15f886664"/>
+				<reportElement style="Detail" x="60" y="0" width="79" height="15" uuid="2641c6be-0ccd-43ca-8c40-f59ca3e53c1f"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Proyecto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="184" y="0" width="64" height="15" uuid="bafde93f-c675-48bb-9ef0-3af83972668c"/>
+				<reportElement style="Detail" x="152" y="0" width="69" height="15" uuid="2235a62b-6393-4b75-990b-eb48a0fbf664"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Costo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="248" y="0" width="92" height="15" uuid="a099a654-838b-40f4-9da9-8fa1d25d5888"/>
+				<reportElement style="Detail" x="221" y="0" width="79" height="15" uuid="7920e27b-db96-4c06-b89a-8b151d66e908"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Estado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="327" y="0" width="92" height="15" uuid="04dcfee7-ab1b-418d-b2ba-e339118bf3b6"/>
+				<reportElement style="Detail" x="300" y="0" width="79" height="15" uuid="fa00c44a-45b3-4611-a3ea-ad1eb62bf046"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Motivo_Cancelado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="460" y="0" width="92" height="15" uuid="51d97b61-a4ae-4e2d-ab34-bde2b4703604"/>
+				<reportElement style="Detail" x="379" y="0" width="79" height="15" uuid="6787e47f-7981-4f22-8ab9-b32d860dbd5e"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{Municipio}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="Detail" x="458" y="0" width="95" height="15" uuid="e0c6a235-4506-4fd0-b084-ba7bc1b82ea3"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Departamento}]]></textFieldExpression>
 			</textField>
@@ -138,7 +135,7 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 	<columnFooter>
 		<band height="45" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1" uuid="2380968c-f0f4-45ee-9fd4-bff6ab128af4"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1" uuid="c7d7a327-2659-418b-bdad-9cc6ec98a783"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
@@ -148,21 +145,21 @@ WHERE d.idDepto = $P{idDepto} AND p.estadoProyecto = $P{estado}]]>
 	<pageFooter>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement style="Column header" x="433" y="0" width="80" height="20" uuid="c9e5cb80-b75c-44f1-a457-90064aff7c3a"/>
+				<reportElement style="Column header" x="433" y="0" width="80" height="20" uuid="087d4fa0-774a-436c-8ef0-be17f9f6d8d8"/>
 				<textElement textAlignment="Right">
 					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement style="Column header" x="513" y="0" width="40" height="20" uuid="e293704b-8852-4a9d-90e9-739d79d96ccf"/>
+				<reportElement style="Column header" x="513" y="0" width="40" height="20" uuid="37e8e1e3-93ba-4e4f-82e1-1ee8c68195c8"/>
 				<textElement>
 					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement style="Column header" x="0" y="0" width="197" height="20" uuid="aed6a15f-8637-4895-912e-00670fa4ace3"/>
+				<reportElement style="Column header" x="0" y="0" width="197" height="20" uuid="122dac46-3c49-429d-bf15-725ee46a2a86"/>
 				<textElement>
 					<font size="10" isBold="false"/>
 				</textElement>
