--- a/web/reportes/reporteBoletaS.jrxml
+++ b/web/reportes/reporteBoletaS.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1a2b5446-7f66-48f9-b954-d08f16f29fdb">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="027eda10-28f9-4b82-b934-200237db6374">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -8,7 +8,7 @@
 	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
 	<style name="Detail" fontName="Arial" fontSize="12"/>
 	<queryString language="SQL">
-		<![CDATA[SELECT e.dui AS DUI, e.nombreEmpleado AS Nombre, e.apellidoEmpleado AS Apellido, e.disponible AS Disponibilidad, (e.salario - (e.salario * 0.1) - (e.salario * 0.0625)) AS Salario, e.telefono AS Telefono FROM empleado AS e;]]>
+		<![CDATA[SELECT e.dui AS DUI, e.nombreEmpleado AS Nombre, e.apellidoEmpleado AS Apellido, e.disponible AS Disponibilidad, (e.salario - (e.salario * 0.1) - (e.salario * 0.0625)) AS Salario, (e.salario * 0.1) AS Renta , (e.salario * 0.0625) AS AFP, e.telefono AS Telefono FROM empleado AS e;]]>
 	</queryString>
 	<field name="DUI" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -19,6 +19,8 @@
 	<field name="Salario" class="java.lang.Double">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
+	<field name="Renta" class="java.lang.Double"/>
+	<field name="AFP" class="java.lang.Double"/>
 	<field name="Telefono" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -28,13 +30,13 @@
 	<title>
 		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement style="Title" x="0" y="13" width="263" height="33" uuid="f7d28e22-c86c-4fda-bed0-6eeeec7ed4ab"/>
+				<reportElement style="Title" x="0" y="13" width="263" height="33" uuid="b59c0e70-b518-429d-a170-dca7feaed678"/>
 				<textElement verticalAlignment="Middle"/>
-				<text><![CDATA[Reporte de salarios]]></text>
+				<text><![CDATA[Boleta de pagos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="SubTitle" x="100" y="46" width="200" height="22" uuid="fce8728f-1dec-4cfb-8e98-2f3fc4d49b56"/>
-				<text><![CDATA[De todos los empleados]]></text>
+				<reportElement style="SubTitle" x="100" y="46" width="221" height="22" uuid="44474ae0-8fe1-45d1-96e3-90813f922d37"/>
+				<text><![CDATA[Con descuentos aplicados]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -44,38 +46,48 @@
 	<columnHeader>
 		<band height="36" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="35" width="555" height="1" uuid="8e467299-956f-448b-a50b-31722d7c6a3c"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="35" width="555" height="1" uuid="160d16b9-7c1c-40dd-a566-0b5e3b31c332"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement style="Column header" x="0" y="19" width="92" height="15" uuid="b1fa9459-9f6f-4005-b81c-a7dffe53cf62"/>
+				<reportElement style="Column header" x="0" y="19" width="69" height="15" uuid="1873c0df-c837-4829-92b0-baa56b8a31b1"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[DUI]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="92" y="19" width="92" height="15" uuid="0433584d-ba9d-4316-9456-24a10c800c64"/>
+				<reportElement style="Column header" x="69" y="19" width="69" height="15" uuid="b8e33369-98f1-4876-9be4-da00a4d08c64"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="184" y="19" width="92" height="15" uuid="1b9e1283-54c4-40b9-8a15-8520d38cc3b8"/>
+				<reportElement style="Column header" x="138" y="19" width="69" height="15" uuid="9e1883ed-fe81-4c45-82d5-1284be25464c"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Apellido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="276" y="19" width="92" height="15" uuid="bb9bdf19-0c86-408f-b7a5-c58ad17d63a6"/>
+				<reportElement style="Column header" x="207" y="19" width="69" height="15" uuid="01d5c78a-6d00-40f8-a463-017f5df77bf5"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Disponibilidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="368" y="19" width="92" height="15" uuid="cb3a6dce-5d11-470e-b6b4-618364fed9db"/>
+				<reportElement style="Column header" x="276" y="19" width="69" height="15" uuid="f9a83b50-69f7-4c89-a37d-b7e44730f201"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Salario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="Column header" x="460" y="19" width="92" height="15" uuid="cd2b28e4-4d26-48f0-a032-3a3f9b96ad1a"/>
+				<reportElement style="Column header" x="345" y="19" width="69" height="15" uuid="62a31bd7-5020-4929-8ee0-361e77c1d049"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Renta]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="414" y="19" width="69" height="15" uuid="46d268cc-19a0-4ac2-a98b-6d80a040fb1c"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[AFP]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="483" y="19" width="69" height="15" uuid="10055b89-736a-4f42-90ba-fd8736762bf2"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Telefono]]></text>
 			</staticText>
@@ -84,38 +96,48 @@
 	<detail>
 		<band height="16" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="15" width="555" height="1" uuid="3f6cdaf7-eb20-4a37-a443-21ffac69abb7"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="15" width="555" height="1" uuid="0b3fddaa-2974-46de-a2bc-33be77054ccd"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
 			<textField>
-				<reportElement style="Detail" x="0" y="0" width="92" height="15" uuid="026aae6c-782e-459a-bef8-1ef7964880c6"/>
+				<reportElement style="Detail" x="0" y="0" width="69" height="15" uuid="7bb0faff-7f19-493d-b585-d16a2321b083"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{DUI}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="92" y="0" width="92" height="15" uuid="530c01bf-5e58-4100-ad59-377835e2217b"/>
+				<reportElement style="Detail" x="69" y="0" width="69" height="15" uuid="12183a8e-b808-4fa4-9ef5-b21ca0ec4514"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="184" y="0" width="92" height="15" uuid="4d798b5a-59e8-4f2a-86d6-894145ef6eed"/>
+				<reportElement style="Detail" x="138" y="0" width="69" height="15" uuid="1f69aa73-06ff-4a57-8925-854da1bf7dc8"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Apellido}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="276" y="0" width="92" height="15" uuid="cf0d2ae0-183b-4ae6-984b-7bc10a97c55d"/>
+				<reportElement style="Detail" x="207" y="0" width="69" height="15" uuid="3b323df6-92fa-4cdb-bd35-30c44b38ed26"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Disponibilidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="368" y="0" width="92" height="15" uuid="f7d54d5d-514b-4ae1-a399-779d4d330aa0"/>
+				<reportElement style="Detail" x="276" y="0" width="69" height="15" uuid="eb73efb7-49ec-4a4a-8d3b-279d74f168f2"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Salario}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="Detail" x="460" y="0" width="92" height="15" uuid="fb19a407-6dd9-4eec-bbd5-8eabca2f3b7e"/>
+				<reportElement style="Detail" x="345" y="0" width="69" height="15" uuid="2a0fbf83-b729-4223-b113-581210a67ecf"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{Renta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="Detail" x="414" y="0" width="69" height="15" uuid="23ec4429-9bcb-48aa-b98a-5f971a051fe9"/>
+				<textElement textAlignment="Center"/>
+				<textFieldExpression><![CDATA[$F{AFP}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="Detail" x="483" y="0" width="69" height="15" uuid="18317936-b62d-4772-8ef3-5298f7b71136"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{Telefono}]]></textFieldExpression>
 			</textField>
@@ -124,7 +146,7 @@
 	<columnFooter>
 		<band height="45" splitType="Stretch">
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1" uuid="f9aa7eaa-e665-4ec5-b0b3-73777df6b042"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1" uuid="ce6f4bec-e7ea-48e3-9955-88adfebef9ae"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
@@ -134,21 +156,21 @@
 	<pageFooter>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement style="Column header" x="433" y="0" width="80" height="20" uuid="baabecba-541c-4b8e-98e9-327a7d38c077"/>
+				<reportElement style="Column header" x="433" y="0" width="80" height="20" uuid="d88a0087-f5c9-4f1f-bf3a-7462e7f274b8"/>
 				<textElement textAlignment="Right">
 					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement style="Column header" x="513" y="0" width="40" height="20" uuid="ad8d57dd-910f-47fa-ad59-32ea922b984b"/>
+				<reportElement style="Column header" x="513" y="0" width="40" height="20" uuid="db5ee1c3-42a8-47cc-8eda-22a0e0e2037c"/>
 				<textElement>
 					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement style="Column header" x="0" y="0" width="197" height="20" uuid="873aba00-e816-4e03-8978-aec8a6be5beb"/>
+				<reportElement style="Column header" x="0" y="0" width="197" height="20" uuid="644e25f0-62db-4ded-9ae7-20fc68ff844f"/>
 				<textElement>
 					<font size="10" isBold="false"/>
 				</textElement>
